# assignment-image-rotation-with-additional-task

./: CMakeLists.txt  README.md
solution/: CMakeLists.txt
solution/src/: main.c
solution/src/utilities/: debug.h  math_work.h  source.c  source.cpp  source.h  transformation.h  wedebug.h
